--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
+        android:background="#2196F3"
         android:text="Login"
         android:textColor="#FFFFFF"
         android:textSize="14dp" />
